update docker file

--- a/puppeteer/Dockerfile
+++ b/puppeteer/Dockerfile
@@ -1,11 +1,10 @@
 FROM linuxserver/chromium:latest
 
-RUN apt update
-RUN apt install -y git nano
-RUN npm install -g pnpm yarn
-
 USER abc
+
+RUN sudo apt update
+RUN sudo apt install -y git nano
+RUN sudo npm install -g pnpm yarn
 RUN sudo npx puppeteer browsers install chrome@stable
 
-USER root
-RUN npx puppeteer browsers install chrome@stable
+WORKDIR /real-estate-crawler
